---
source: macros-tests/tests/service_insta.rs
expression: result
---
pub struct SomeServiceExposure<T> {
    route_idx: u8,
    inner: T,
}
impl<T: sails::meta::ServiceMeta> sails::gstd::services::Exposure
for SomeServiceExposure<T> {
    fn interface_id() -> sails::meta::InterfaceId {
        <T as sails::meta::Identifiable>::INTERFACE_ID
    }
    fn route_idx(&self) -> u8 {
        self.route_idx
    }
    fn check_asyncness(
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
    ) -> Option<bool> {
        if !T::ASYNC {
            return Some(false);
        }
        match (interface_id, entry_id) {
            (id, 0u16) if id == <T as sails::meta::Identifiable>::INTERFACE_ID => {
                Some(false)
            }
            _ => None,
        }
    }
}
impl<T> core::ops::Deref for SomeServiceExposure<T> {
    type Target = T;
    fn deref(&self) -> &Self::Target {
        &self.inner
    }
}
impl<T> core::ops::DerefMut for SomeServiceExposure<T> {
    fn deref_mut(&mut self) -> &mut Self::Target {
        &mut self.inner
    }
}
impl<'a, 'b, T, U> SomeServiceExposure<SomeService<'a, 'b, T, U>>
where
    T: Clone,
    U: Iterator<Item = u32>,
{
    #[export]
    pub fn do_this(&mut self) -> u32 {
        42
    }
    pub fn try_handle(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            (
                id,
                0u16,
            ) if id
                == <self::SomeService<
                    'a,
                    'b,
                    T,
                    U,
                > as sails::meta::Identifiable>::INTERFACE_ID => {
                let request: some_service_meta::__DoThisParams = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.do_this();
                let value = 0u128;
                if !sails::gstd::is_empty_tuple::<u32>() {
                    sails::gstd::encode_invocation_payload::<
                        some_service_meta::__DoThisParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            _ => None,
        }
    }
    pub async fn try_handle_async(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            _ => None,
        }
    }
    pub fn try_handle_solidity(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        input: &[u8],
    ) -> Option<(sails::Vec<u8>, u128, bool)> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            (
                id,
                0u16,
            ) if id
                == <self::SomeService<
                    'a,
                    'b,
                    T,
                    U,
                > as sails::meta::Identifiable>::INTERFACE_ID => {
                let (__encode_reply,): (bool,) = sails::alloy_sol_types::SolValue::abi_decode_params(
                        input,
                    )
                    .ok()?;
                #[cfg(target_arch = "wasm32")]
                if sails::gstd::msg::value() > 0 {
                    core::panic!("'do_this' accepts no value");
                }
                let result = self.do_this();
                let value = 0u128;
                let output = if __encode_reply {
                    let message_id = sails::alloy_primitives::B256::new(
                        sails::gstd::Syscall::message_id().into_bytes(),
                    );
                    sails::alloy_sol_types::SolValue::abi_encode_sequence(
                        &(message_id, result),
                    )
                } else {
                    sails::alloy_sol_types::SolValue::abi_encode_sequence(&(result,))
                };
                return Some((output, value, __encode_reply));
            }
            _ => None,
        }
    }
    pub async fn try_handle_solidity_async(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        input: &[u8],
    ) -> Option<(sails::Vec<u8>, u128, bool)> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            _ => None,
        }
    }
}
impl<'a, 'b, T, U> sails::gstd::services::Service for SomeService<'a, 'b, T, U>
where
    T: Clone,
    U: Iterator<Item = u32>,
{
    type Exposure = SomeServiceExposure<Self>;
    fn expose(self, route_idx: u8) -> Self::Exposure {
        Self::Exposure {
            route_idx,
            inner: self,
        }
    }
}
mod some_service_meta {
    use super::*;
    const __INTERFACE_ID: sails::meta::InterfaceId = {
        let mut final_hash = sails::keccak_const::Keccak256::new();
        final_hash = final_hash.update(&sails::hash_fn!(command DoThis() -> u32));
        let hash = final_hash.finalize();
        sails::meta::InterfaceId::from_bytes_32(hash)
    };
    impl<'a, 'b, T, U> sails::meta::Identifiable for super::SomeService<'a, 'b, T, U>
    where
        T: Clone,
        U: Iterator<Item = u32>,
    {
        const INTERFACE_ID: sails::meta::InterfaceId = __INTERFACE_ID;
    }
    impl<'a, 'b, T, U> sails::meta::ServiceMeta for super::SomeService<'a, 'b, T, U>
    where
        T: Clone,
        U: Iterator<Item = u32>,
    {
        type CommandsMeta = CommandsMeta;
        type QueriesMeta = QueriesMeta;
        type EventsMeta = EventsMeta;
        const BASE_SERVICES: &'static [sails::meta::BaseServiceMeta] = &[];
        const METHODS: &'static [sails::meta::MethodMetadata] = &[
            sails::meta::MethodMetadata {
                name: "DoThis",
                entry_id: 0u16,
                hash: sails::hash_fn!(command DoThis() -> u32),
                is_async: false,
            },
        ];
        const ASYNC: bool = false;
    }
    sails::invocation_io!(
        pub struct __DoThisParams {}, interface_id = __INTERFACE_ID, entry_id = 0u16,
    );
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum CommandsMeta {
        DoThis(__DoThisParams, u32),
    }
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum QueriesMeta {}
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum NoEvents {}
    pub type EventsMeta = NoEvents;
}
impl<'a, 'b, T, U> sails::solidity::ServiceSignature for SomeService<'a, 'b, T, U>
where
    T: Clone,
    U: Iterator<Item = u32>,
{
    const METHODS: &'static [sails::solidity::MethodExpo] = &[
        (
            <SomeService as sails::meta::Identifiable>::INTERFACE_ID,
            0u16,
            "DoThis",
            <<(
                bool,
            ) as sails::alloy_sol_types::SolValue>::SolType as sails::alloy_sol_types::SolType>::SOL_NAME,
            <<(
                sails::alloy_primitives::B256,
                u32,
            ) as sails::alloy_sol_types::SolValue>::SolType as sails::alloy_sol_types::SolType>::SOL_NAME,
        ),
    ];
}
